--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "three": "^0.179.1"
   },
   "devDependencies": {
