--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^9.3.0",
+    "cloudinary": "^2.7.0",
     "firebase": "^12.1.0",
     "lucide-react": "^0.536.0",
     "mongodb": "^6.18.0",
